# a2a-test-alone

./: .env.example  BACKEND-MESSAGE-FIX.md  CAMBIO-A-GROQ.md  CAMBIO-GENERACION-IMAGENES-HF.md  CAMBIOS-ENV.md  COMO-REINICIAR.md  FIX-GROQ-API-KEY.md  FIX-GROQ-VISION-AGENTE-MEDICO.md  FIX-HTML-IMAGENES-INLINE.md  FIX-IMAGENES-AGENTE-MEDICO.md  FIX-IMAGENES-BASE64.md  FRONTEND-FIX.md  INICIO-RAPIDO.md  PROBLEMA-FORMULAS-LATEX.md  README.md  RESUMEN-COMPLETO-ACTUALIZADO.md  RESUMEN-COMPLETO.md  RESUMEN-FINAL-COMPLETO.md  SOLUCION-ENV.md  install-agents.sh  package-lock.json  package.json  pyproject.toml  restart-all.sh  restart-backend.sh  start-ordered.sh  test-env-loading.py  test-medical-agent.sh  verify-env-loading.py
.kiro/specs/frontend-integration/: .config.kiro  design.md  requirements.md  tasks.md
demo/ui/: main.py  pyproject.toml
demo/ui/components/: api_key_dialog.py  chat_bubble.py  conversation.py  page_scaffold.py
demo/ui/service/client/: client.py
demo/ui/service/server/: adk_host_manager.py  beeai_host_manager.py  beeai_orchestrator_workflow.py  message_utils.py  server.py
demo/ui/state/: host_agent_service.py
frontend/: .env.local.example  next.config.js  package-lock.json  package.json
frontend/app/: globals.css
frontend/components/admin/: AdminDashboard.tsx  AgentsManager.tsx  ApiKeyManager.tsx  ConversationManager.tsx  EventsManager.tsx  MessageManager.tsx  TasksManager.tsx
frontend/components/chat/: ChatInterface.tsx  MessageBubble.tsx  MessageInput.tsx
orquestador/: pyproject.toml
orquestador/app/: __main__.py  test_client.py
samples/python/: pyproject.toml
samples/python/agents/helloworld/: agent_executor.py
samples/python/agents/images/: README.md  debug_response.json  main.py  monkey_astronaut_0_0.txt  pyproject.toml
samples/python/agents/images/app/: __main__.py  agent.py  agent_executor.py  in_memory_cache.py  langsmith_config.py  test_client.py
samples/python/agents/medical_Images/: README.md  main.py  pyproject.toml
samples/python/agents/medical_Images/app/: __main__.py  agent.py  agent_executor.py  custom_request_handler.py  test_client.py
samples/python/agents/multimodal/: README.md  pyproject.toml
samples/python/agents/multimodal/app/: __main__.py  agent.py  agent_executor.py  custom_request_handler.py
samples/python/agents/palimodal/: README.md  pyproject.toml
samples/python/agents/palimodal/app/: __main__.py  agent.py  agent_executor.py  custom_request_handler.py
samples/python/hosts/multiagent/: host_agent.py
