[project]
name = "a2a-samples-workspace"
version = "0.1.0"
description = "Agent2Agent samples"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.10",
    "fastapi>=0.120.4",
    "google-adk>=1.17.0",
    "mesop>=1.1.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.38.0",
]

[tool.uv.workspace]
members = [
    "samples/python/agents/images",
    "samples/python/agents/medical_Images",
]


