[project]
name = "medical-images"
version = "0.1.0"
description = "Agente de procesamiento de imágenes médicas utilizando Google Gemini y Tavily."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.2",
    "click>=8.2.1",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "sse-starlette>=3.0.2",
    "starlette>=0.47.2",
    "tavily-python>=0.7.12",
    "uvicorn>=0.35.0",
]

[project.scripts]
medical_Images = "app.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
